refactoring and upgrade spring version and jdk 11